# k8s-cluster-maintenance-bot

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  build_rules.yaml  config_debug.yaml  deps.bzl  go.mod  go.sum  main.go
cmd/build-sidecar/: BUILD.bazel  main.go
cmd/maintenance-bot/: BUILD.bazel  main.go
cmd/update-manifest/: BUILD.bazel
pkg/config/: BUILD.bazel  config.go
pkg/consumer/: BUILD.bazel  build.go  context.go  dnscontrol.go  util.go
pkg/webhook/: BUILD.bazel  github.go
testdata/: kustomization.yaml
