load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/f110/update-repository
gazelle(name = "gazelle")

load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

pkg_tar(
    name = "bin",
    srcs = [
        ":update-repository",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
)

container_image(
    name = "image",
    base = "@com_google_distroless_base//image",
    entrypoint = ["/usr/local/bin/update-repository"],
    tars = [":bin"],
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "docker.pkg.github.com",
    repository = "f110/update-repository",
    tag = "latest",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/update-repository",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_go_github_v29//github:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//config:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/transport/http:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "update-repository",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
