load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/k8s-cluster-maintenance-bot/cmd/maintenance-bot",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/consumer:go_default_library",
        "//pkg/webhook:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)

go_binary(
    name = "maintenance-bot",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
