load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/k8s-cluster-maintenance-bot/cmd/update-manifest",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_go_github_v29//github:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
        "@in_gopkg_src_d_go_git_v4//config:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
        "@in_gopkg_src_d_go_git_v4//plumbing/transport/http:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "update-manifest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
