load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/f110/k8s-cluster-maintenance-bot/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_sigs_yaml//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
