load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["build.go"],
    importpath = "github.com/f110/k8s-cluster-maintenance-bot/pkg/consumer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/watch:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
    ],
)
