load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["github.go"],
    importpath = "github.com/f110/k8s-cluster-maintenance-bot/pkg/webhook",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "//vendor/github.com/google/go-github/v29/github:go_default_library",
    ],
)
